...
                                            <segue destination="BYZ-38-t0r" kind="show" identifier="Single Player" id="Fdb-ec-qGX"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T9P-LD-qVj">
                                        <rect key="frame" x="0.0" y="80" width="227" height="60"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                        <state key="normal" title="Two Players"/>
                                        <connections>
                                            <segue destination="BYZ-38-t0r" kind="show" identifier="Two Players" id="mjx-xW-QAm"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tic-Tac-Toe!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ci-o1-rzC">
                                <rect key="frame" x="105.5" y="20" width="165.5" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="game_title"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="twg-O1-w3k">
                                <rect key="frame" x="16" y="76" width="343" height="515"/>
...
